--- a/templates/all_news.html
+++ b/templates/all_news.html
@@ -25,7 +25,7 @@
           <div class="col-md-4">
             <div class="card" style = "width: 18rem;">
               <div class="card-body">
-                <h5 class="card-title"><a href="http://127.0.0.1:5000/news/{{ one_news.id }}">{{ one_news.title }}</a></h5>
+                <h5 class="card-title"><a href="/news/{{ one_news.id }}">{{ one_news.title }}</a></h5>
                 <hr/>
                 <p class="card-text">{{ one_news.details }}</p>
               </div>
