--- a/templates/new_news.html
+++ b/templates/new_news.html
@@ -14,7 +14,7 @@
   <div class="container">
       <div class="row d-flex justify-content-center">
           <div class="col-md-6">
-              <form action="http://127.0.0.1:5000/new" method="POST">
+              <form action="/new" method="POST">
                   <div class="form-group">
                       <label for="exampleInputTitle">Title of news</label>
                       <input type="text" name="title" class="form-control" id="exampleInputTitle">
